docs: unify title capitalization style

--- a/e2e/fixtures/package-manager-tabs/doc/index.mdx
+++ b/e2e/fixtures/package-manager-tabs/doc/index.mdx
@@ -1,11 +1,11 @@
 import { PackageManagerTabs } from '@theme';
 
-# Hello World
+# Hello world
 
-## PackageManagerTabs A
+## PackageManagerTabs a
 
 <PackageManagerTabs command="create rspress@latest" />
 
-## PackageManagerTabs B
+## PackageManagerTabs b
 
 <PackageManagerTabs command="install rspress -D" />
