--- a/e2e/fixtures/tabs-component/doc/index.mdx
+++ b/e2e/fixtures/tabs-component/doc/index.mdx
@@ -1,14 +1,14 @@
 import { Tabs, Tab } from 'rspress/theme';
 
-# Hello World
+# Hello world
 
-## Tab A
+## Tab a
 
 <Tabs tabContainerClassName="tabs-a">
   <Tab label="label1">content1</Tab>
 </Tabs>
 
-## Tab B
+## Tab b
 
 <Tabs tabContainerClassName="tabs-b">
   <Tab label="label2">content2</Tab>
@@ -16,6 +16,6 @@ import { Tabs, Tab } from 'rspress/theme';
   <Tab label="label4">content4</Tab>
 </Tabs>
 
-## Tab C
+## Tab c
 
 <Tabs tabContainerClassName="tabs-c"></Tabs>
