--- a/packages/document/docs/en/api/client-api/api-runtime.mdx
+++ b/packages/document/docs/en/api/client-api/api-runtime.mdx
@@ -63,7 +63,7 @@ import UseI18n from '../../fragments/useI18n';
 
 > See more in [Internationalization](/guide/default-theme/i18n).
 
-## Router Hook
+## Router hook
 
 The framework internally uses and re-exports all APIs of `react-router-dom`, you can use it like this:
 
