--- a/packages/document/docs/en/api/config/config-build.mdx
+++ b/packages/document/docs/en/api/config/config-build.mdx
@@ -1,4 +1,4 @@
-# Build Config
+# Build config
 
 ## builderConfig
 
@@ -115,7 +115,7 @@ export default defineConfig({
 });
 ```
 
-### Default Config
+### Default config
 
 If you need to view the default Rspack or Rsbuild configs, you can add the `DEBUG=rsbuild` parameter when running the `rspress dev` or `rspress build` command:
 
