--- a/packages/document/docs/en/guide/advanced/extend-build.mdx
+++ b/packages/document/docs/en/guide/advanced/extend-build.mdx
@@ -1,4 +1,4 @@
-# Build Extension
+# Build extension
 
 ## Rsbuild
 
@@ -44,7 +44,7 @@ export default defineConfig({
 });
 ```
 
-## MDX Compilation
+## MDX compilation
 
 The compilation of MDX in the framework is based on [unified](https://github.com/unifiedjs/unified), and you can add related compilation plugins through `markdown` configuration. for example
 :
