--- a/packages/document/docs/en/guide/basic/conventional-route.mdx
+++ b/packages/document/docs/en/guide/basic/conventional-route.mdx
@@ -1,4 +1,4 @@
-# Conventional Route
+# Conventional route
 
 ## What is it?
 
@@ -6,7 +6,7 @@ Rspress uses file system routing, and the file path of the page is simply mapped
 
 For example, if there is a file named `foo.md` in the `docs` directory, the routing path for that file will be `/foo`.
 
-## Mapping Rules
+## Mapping rules
 
 Rspress automatically scans the root directory and all subdirectories, and maps file paths to route paths. For example, if you have the following file structure:
 
@@ -28,7 +28,7 @@ The specific mapping rules are as follows:
 | `/foo/bar.md`   | `/foo/bar` |
 | `/zoo/index.md` | `/zoo/`    |
 
-## Component Routing
+## Component routing
 
 In conventional routing, in addition to `.md(x)` files, you can also use `.tsx` files as route components. By default, a component is exported in `.tsx`, and this component will be automatically registered in the route. For example:
 
@@ -50,7 +50,7 @@ export const frontmatter = {
 
 For detailed meanings of each `pageType`, please refer to the [API documentation](/api/config/config-frontmatter#pagetype).
 
-## Custom Behavior
+## Custom behavior
 
 If you want to customize the routing behavior, you can use the `route` field in the configuration file. For example:
 
@@ -67,7 +67,7 @@ export default defineConfig({
 });
 ```
 
-## Best Practices
+## Best practices
 
 We recommend that you place documentation files in the `docs` directory to make your project more clear. For non-documentation content, such as custom components, util functions, etc., they can be maintained outside the `docs` directory. For example:
 
