--- a/packages/document/docs/en/guide/basic/ssg.mdx
+++ b/packages/document/docs/en/guide/basic/ssg.mdx
@@ -1,4 +1,4 @@
-# Static Site Generation
+# Static site generation
 
 ## Introduction
 
@@ -27,7 +27,7 @@ The essence of static site generation is to pre-render components at the build s
 
 Considering the cost of static site generation, Rspress only pre-renders during production environment builds. In the development environment, it still uses the traditional SPA rendering mode without pre-rendering.
 
-## Adding Custom Site Content
+## Adding custom site content
 
 Through `builderConfig.html.tags`, you can customize the site HTML content, such as adding statistical code, adding scripts and styles, etc.
 
