--- a/packages/document/docs/en/guide/default-theme/doc-page.mdx
+++ b/packages/document/docs/en/guide/default-theme/doc-page.mdx
@@ -1,6 +1,6 @@
-# Doc Page
+# Doc page
 
-## Page Type
+## Page type
 
 You can specify the pageType in the `frontmatter` metadata to use different layouts in the page. By default, the pageType of the document is `doc`, so the `sidebar` on the left and the `outline ` on the right will appear by default. If you don't need these, you can set pageType to `custom`:
 
@@ -14,7 +14,7 @@ pageType: custom
 
 In `rspress.config.ts`, you can configure the content of the sidebar, for details, please refer to [Sidebar Config](/api/config/config-theme#sidebar).
 
-## Outline Title
+## Outline title
 
 With the `outlineTitle` config, you can set the title of the outline bar.
 
@@ -29,7 +29,7 @@ export default defineConfig({
 });
 ```
 
-## Previous/Next Page Text
+## Previous/Next page text
 
 With the `prevPageText` and `nextPageText` config, you can set the previous/next page text.
 
