--- a/packages/document/docs/en/guide/default-theme/i18n.mdx
+++ b/packages/document/docs/en/guide/default-theme/i18n.mdx
@@ -142,7 +142,7 @@ As you can see, we put documents in different languages ​​in the `en` and `z
 
 Through the \_meta.json file, we can configure the content of the nav bar and sidebar. For details, please refer to [Auto Nav/Sidebar](/guide/basic/auto-nav-sidebar).
 
-### Navigation Bar Level
+### Navigation bar level
 
 In the \_meta.json configuration at the navigation bar level, you can specify `text` as an i18n key, for example:
 
@@ -158,7 +158,7 @@ In the \_meta.json configuration at the navigation bar level, you can specify `t
 
 Here, `text` is `guide`, this value will be automatically translated into `指南` or `Guide`, depending on the current language.
 
-### Sidebar Level
+### Sidebar level
 
 In the \_meta.json configuration at the sidebar level, you can specify `label` as an i18n key, for example:
 
