--- a/packages/document/docs/en/guide/default-theme/navbar.mdx
+++ b/packages/document/docs/en/guide/default-theme/navbar.mdx
@@ -2,7 +2,7 @@
 
 The navbar is very important to a website. It allows users to quickly jump between different pages of the website, and also allows users to quickly find some important information of the website.
 
-## Custom Navigation Menu
+## Custom navigation menu
 
 You can add a custom navigation menu in `themeConfig.nav`, configured as an array, as follows:
 
@@ -117,7 +117,7 @@ export default defineConfig({
 });
 ```
 
-## Related Links
+## Related links
 
 Social Links to the Site. For example:
 
