--- a/packages/document/docs/en/guide/start/getting-started.mdx
+++ b/packages/document/docs/en/guide/start/getting-started.mdx
@@ -1,10 +1,10 @@
-# Quick Start
+# Quick start
 
 import { PackageManagerTabs } from '@theme';
 
 ## 1. Initialize the project
 
-### Method 1: Create via CLI
+### Method 1: create via CLI
 
 You can create a Rspress project using the `create-rspress` cli:
 
@@ -12,7 +12,7 @@ You can create a Rspress project using the `create-rspress` cli:
 
 Input the project directory name, and then the cli will create the project for you.
 
-### Method 2: Manual Creation
+### Method 2: manual creation
 
 First, you can create a new directory with the following command:
 
@@ -77,7 +77,7 @@ And then create `tsconfig.json`, add the following config:
 }
 ```
 
-## 2. Start Dev Server
+## 2. Start dev server
 
 Start the local development service with the following command:
 
@@ -91,7 +91,7 @@ For the dev command, you can specify the port number or host of the development 
 
 :::
 
-## 3. Build in Production
+## 3. Build in production
 
 Build the production bundle with the following command
 :
