--- a/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
@@ -20,7 +20,7 @@ When you have configured `lastUpdated: true` in the default theme, this plugin w
 
 ## Usage
 
-### 1. Register the Plugin
+### 1. Register the plugin
 
 ```ts title="rspress.config.ts"
 import { pluginLastUpdated } from '@rspress/plugin-last-updated';
@@ -31,7 +31,7 @@ export default defineConfig({
 });
 ```
 
-### 2. Access at Runtime
+### 2. Access at runtime
 
 After registering the plugin, you can get the last updated timestamp of the article at runtime. Here's an example:
 
