--- a/packages/document/docs/en/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/playground.mdx
@@ -31,7 +31,7 @@ This plugin will set `markdown.mdxRs` to `false`. In the future, the Rspress tea
 
 :::
 
-### Internal Components
+### Internal components
 
 :::tip Note
 It is recommended to use js or jsx to write sample code to avoid ts type errors in the editor.
@@ -96,7 +96,7 @@ export default App;
 Make sure the document ends with `.mdx`.
 :::
 
-### External Components
+### External components
 
 In addition to writing the component code in the code block of the mdx file, you can also write the component code in an external file, and then import it in the mdx file through the code tag. For example
 
