--- a/packages/document/docs/en/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/preview.mdx
@@ -31,7 +31,7 @@ This plugin will set `markdown.mdxRs` to `false`. In the future, the Rspress tea
 
 :::
 
-### Internal Components
+### Internal components
 
 The component code of internal components is declared in the mdx file. You can declare the following code block in the mdx file:
 
@@ -73,7 +73,7 @@ export default App;
 Make sure the document ends with `.mdx`.
 :::
 
-### External Components
+### External components
 
 In addition to writing the component code in the code block of the mdx file, you can also write the component code in an external file, and then import it in the mdx file through the code tag. For example
 
