--- a/packages/document/docs/en/plugin/official-plugins/rss.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/rss.mdx
@@ -10,7 +10,7 @@ Generates RSS files for specific document pages with [feed](https://github.com/j
 
 <PackageManagerTabs command="add @rspress/plugin-rss -D" />
 
-### Update Rspress Config
+### Update Rspress config
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
