--- a/packages/document/docs/en/plugin/official-plugins/shiki.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/shiki.mdx
@@ -56,11 +56,11 @@ The code highlighting theme uses `css-variables`. You can also choose your favor
 
 The default languages supported include `js`, `jsx`, `ts`, `tsx`, `json`, `css`, `scss`, `less`, `xml`, `diff`, `yaml`, `md`, `mdx`, `bash`. If you want to support more languages, you can pass the `langs` attribute in the configuration file. This attribute is an array, each item in the array is an id of a language, refer to the [Shiki-supported language list](https://github.com/shikijs/shiki/blob/main/docs/languages.md) for details.
 
-## Transformer Concept and Usage
+## Transformer concept and usage
 
 Transformer is a concept in this plugin, its function is to transform specific syntax of code blocks, for example, you can use this feature to implement the diff highlighting effect of code blocks.
 
-### Introduction to Built-in Transformers
+### Introduction to built-in transformers
 
 A few Transformers are built into this plugin, including:
 
