--- a/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
@@ -88,7 +88,7 @@ Note that the documentation is regenerated every time you start the project to r
 
 Also, we do not recommend modifying or adding documents in the `api` directory because these documents will be overwritten each time the project is started due to changes in module content.
 
-## Parameter Description
+## Parameter description
 
 ### entryPoints
 
