--- a/packages/document/docs/zh/guide/start/introduction.mdx
+++ b/packages/document/docs/zh/guide/start/introduction.mdx
@@ -243,7 +243,7 @@ export default () => {
 
 ![](https://lf3-static.bytednsdoc.com/obj/eden-cn/uhbfnupenuhf/rspress/demo-preview-mobile.png)
 
-#### Demo 实时 Playground
+#### Demo 实时 playground
 
 对于组件文档，如果能提供组件的实时编辑的能力，将能大大提高文档的交互体验。
 
