--- a/packages/document/docs/en/fragments/builtin-components.mdx
+++ b/packages/document/docs/en/fragments/builtin-components.mdx
@@ -507,7 +507,7 @@ interface TabProps {
 
 The `value` field is used to identify the current tab, if not passed, the default label will be used.
 
-## Table of Contents
+## Table of contents
 
 Render TOC of current page
 
