--- a/packages/document/docs/en/guide/default-theme/home-page.mdx
+++ b/packages/document/docs/en/guide/default-theme/home-page.mdx
@@ -1,4 +1,4 @@
-# Home Page
+# Home page
 
 You can define the content of the Home page through frontmatter, see [FrontMatter Config](/api/config/config-frontmatter.html#hero) for detailed types. Here is a simple example:
 
