--- a/packages/document/docs/en/guide/basic/use-mdx.mdx
+++ b/packages/document/docs/en/guide/basic/use-mdx.mdx
@@ -58,7 +58,7 @@ You can add Front Matter at the beginning of your Markdown file, which is a YAML
 
 ```yaml
 ---
-title: Hello World
+title: Hello world
 ---
 ```
 
@@ -68,7 +68,7 @@ You can also access properties defined in Front Matter in the body, for example:
 
 ```markdown
 ---
-title: Hello World
+title: Hello world
 ---
 
 # {frontmatter.title}
@@ -77,7 +77,7 @@ title: Hello World
 The previously defined properties will be passed to the component as `frontmatter` properties. So the final output will be:
 
 ```html
-<h1>Hello World</h1>
+<h1>Hello world</h1>
 ```
 
 ## Custom container
