--- a/packages/document/docs/en/guide/start/getting-started.mdx
+++ b/packages/document/docs/en/guide/start/getting-started.mdx
@@ -27,7 +27,7 @@ Execute `npm init -y` to initialize a project. You can install Rspress using npm
 Then create the file with the following command
 
 ```bash
-mkdir docs && echo '# Hello World' > docs/index.md
+mkdir docs && echo '# Hello world' > docs/index.md
 ```
 
 Add the following script to `package.json`:
