--- a/packages/document/docs/zh/guide/basic/use-mdx.mdx
+++ b/packages/document/docs/zh/guide/basic/use-mdx.mdx
@@ -58,7 +58,7 @@ export Button = () => <button />;
 
 ```yaml
 ---
-title: Hello World
+title: Hello world
 ---
 ```
 
@@ -68,7 +68,7 @@ title: Hello World
 
 ```mdx
 ---
-title: Hello World
+title: Hello world
 ---
 
 # {frontmatter.title}
@@ -77,7 +77,7 @@ title: Hello World
 前面定义的属性将作为 `frontmatter` 属性传递给组件。所以最终输出将是：
 
 ```html
-<h1>Hello World</h1>
+<h1>Hello world</h1>
 ```
 
 ## 自定义容器
