--- a/packages/document/docs/zh/guide/start/getting-started.mdx
+++ b/packages/document/docs/zh/guide/start/getting-started.mdx
@@ -27,7 +27,7 @@ mkdir rspress-app && cd rspress-app
 然后通过如下命令创建文件:
 
 ```bash
-mkdir docs && echo '# Hello World' > docs/index.md
+mkdir docs && echo '# Hello world' > docs/index.md
 ```
 
 在 `package.json` 中加上如下的脚本:
