--- a/e2e/fixtures/github-alert-mdxrs/doc/index.mdx
+++ b/e2e/fixtures/github-alert-mdxrs/doc/index.mdx
@@ -42,3 +42,13 @@
 > > Nested blockquote
 
 > ![Image Alt Text](https://github.com/web-infra-dev/rspress/assets/39261479/999e7946-45ff-45d5-b9cd-594e634e0e5a)
+
+1. Title
+
+   > [!INFO]
+   > This is a 'info' style block.
+
+- Title
+
+  > [!WARNING]
+  > This is a 'warning' style block.
