docs: add bun to init project guide

--- a/packages/document/docs/en/guide/start/getting-started.mdx
+++ b/packages/document/docs/en/guide/start/getting-started.mdx
@@ -20,7 +20,7 @@ First, you can create a new directory with the following command:
 mkdir rspress-app && cd rspress-app
 ```
 
-Execute `npm init -y` to initialize a project. You can install Rspress using npm, yarn or pnpm:
+Execute `npm init -y` to initialize a project. You can install Rspress using npm, pnpm, yarn or bun:
 
 <PackageManagerTabs command="install rspress -D" />
 
