--- a/packages/document/docs/zh/guide/start/getting-started.mdx
+++ b/packages/document/docs/zh/guide/start/getting-started.mdx
@@ -20,7 +20,7 @@ import { PackageManagerTabs } from '@theme';
 mkdir rspress-app && cd rspress-app
 ```
 
-执行 `npm init -y` 来初始化一个项目。你可以使用 npm、yarn 或 pnpm 安装 Rspress:
+执行 `npm init -y` 来初始化一个项目。你可以使用 npm、pnpm、yarn 或 bun 安装 Rspress:
 
 <PackageManagerTabs command="install rspress -D" />
 
