feat: support nested container syntax in component in mdx-rs

--- a/e2e/fixtures/github-alert-mdxjs/doc/index.mdx
+++ b/e2e/fixtures/github-alert-mdxjs/doc/index.mdx
@@ -1,3 +1,5 @@
+import { Steps } from '@theme';
+
 # Hello world
 
 > [!TIP]
@@ -52,3 +54,17 @@
 
   > [!WARNING]
   > This is a 'warning' style block.
+
+<Steps>
+
+1. Title
+
+   > [!INFO]
+   > This is a 'info' style block.
+
+- Title
+
+  > [!WARNING]
+  > This is a 'warning' style block.
+
+</Steps>
